# derailleur

./: Cargo.toml  README.md
.zed/: settings.json  tasks.json
derive/: Cargo.toml
derive/src/: from_record.rs  from_records.rs  lib.rs
fixtures/: afternoon-ride.csv  afternoon-ride.dbg  afternoon-ride.fit  morning-trail-run.csv  morning-trail-run.fit  trail-run-course.csv  trail-run-course.dbg  trail-run-course.fit
src/: avec.rs  lib.rs  sans.rs
src/avec/: reader.rs  slice.rs
src/sans/: check.rs  data.rs  definition.rs  header.rs
tests/: common.rs  derive.rs
