[package]
name = "derailleur"
version = "0.1.0"
edition = "2024"

description = "An efficient deserializer for Garmin's Flexible and Interoperable Data Transfer protocol."
repository = "https://github.com/finn-eger/derailleur"
license = "MIT"
keywords = ["garmin", "fit", "no_std"]
categories = ["encoding", "no-std::no-alloc", "parser-implementations"]

[lib]
doctest = false

[workspace]
members = ["derive"]

[dependencies]
either = "1.15.0"
thiserror = { version = "2.0.12", default-features = false }
zerocopy = { version = "0.8.25", features = ["derive"] }
tartan-bitfield = "1.2.0"

[dependencies.derailleur-derive]
version = "0.1.0"
path = "derive"
optional = true

[features]
default = ["derive", "std"]
derive = ["dep:derailleur-derive"]
std = []

[dev-dependencies]
csv = "1.3.1"
tinyvec = "1.9.0"
