[package]
name = "derailleur-derive"
version = "0.1.0"
edition = "2024"

description = "Derive macro implementations for Derailleur"
repository = "https://github.com/finn-eger/derailleur"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = { version = "2.0.101", features = ["extra-traits", "full"] }
